# voxel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  test-signal.mjs  vite.config.ts
docs/: next.md  system-design.md
docs/adr/: 000-adr-format.md  001-tauri-solidjs-over-electron-swift.md  002-mesh-audio-no-central-server.md  003-local-first-sqlite-gossip-sync.md  004-server-key-trust-model.md  005-rendezvous-hidden-from-ux.md  006-tray-first-macos-ux.md  007-inline-svg-icons-no-react.md  008-group-not-server.md  009-e2ee-audio-aes-gcm.md  010-key-at-rest-encryption.md  011-sidecar-first-peer-auto-host.md
scripts/: deploy-signal.sh  release.sh
signal/: Cargo.toml  Dockerfile
signal/deploy/: README.md  apache-vhost.conf  voxel-signal.service
signal/src/: crypto.rs  main.rs  server.rs
src/: App.tsx  index.html  index.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: voxel-signal-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  crypto.rs  db.rs  identity.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src/audio/: ducking.ts  e2ee.ts  mesh.ts  micLevel.ts  ptt.ts  sounds.ts  vad.ts
src/components/: ChannelModal.tsx  ChannelTree.tsx  ContextMenu.tsx  GroupConnect.tsx  GroupInfoModal.tsx  MicLevel.tsx  MuteBar.tsx  ServerConnect.tsx  Settings.tsx  SpeakingIndicator.tsx  UserList.tsx  icons.tsx
src/runtime/: bridge.ts  config.ts  sidecar.ts
src/store/: appState.ts  crypto.ts  db.ts  identity.ts  keyring.ts  servers.ts
src/styles/: pixel.css
src/sync/: changes.ts  gossip.ts  hmac.ts  signaling.ts  vectorClock.ts
