[package]
name = "voxel"
version = "0.1.0-alpha.17"
description = "Retro voice chat — Ventrilo-inspired mesh audio"
authors = ["adamnfineco"]
license = "MIT"
repository = "https://github.com/adamnfineco/voxel"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voxel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-websocket = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }


